objects/Unit__c.object
<CustomObject>
    <label>Apartment</label>
    <nameField>
        <label>Apartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apartments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>IL__c</fullName>
        <formula>IF (ISPICKVAL( Housing_Type__c ,&apos;IL&apos;) || ISBLANK(TEXT(Housing_Type__c) ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sqft__c</fullName>
        <label>Sqft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>LegacyId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupied__c</fullName>
        <formula>If (ISPICKVAL( Status__c ,&apos;Occupied&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Plan__c</fullName>
        <label>Floor Plan</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casesafe_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Casesafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Name__c</fullName>
        <label>Legacy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Monthly__c</fullName>
        <label>Base Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Apartments</relationshipLabel>
        <relationshipName>Apartments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Housing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apartment_Note__c</fullName>
        <label>Apartment Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apartment_Type__c</fullName>
        <label>Apartment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Bed</fullName>
                </value>
                <value>
                    <fullName>2 Bed</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apartment_Status__c</fullName>
        <label>Apartment Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Change_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Entrance_Fee__c</fullName>
        <label>Base Entrance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Floor_Plan__c</fullName>
        <label>Legacy Floor Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Housing_Type__c</fullName>
        <label>Legacy Housing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Care_formula__c</fullName>
        <formula>TEXT( Housing_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Care formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_In_Transfer_Date__c</fullName>
        <formula>If (ISBLANK(Last_Change_Date__c ), Scheduled_Move_In_Date__c , Last_Change_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move In/Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User_Community__c</fullName>
        <formula>IF ( TEXT(Community__c) = $UserRole.Name, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_In_Date__c</fullName>
        <label>Scheduled Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apartment_Type_Category__c</fullName>
        <label>Apartment Type Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcove/Studio</fullName>
                </value>
                <value>
                    <fullName>1BD</fullName>
                </value>
                <value>
                    <fullName>2BD</fullName>
                </value>
                <value>
                    <fullName>3BD</fullName>
                </value>
                <value>
                    <fullName>TH/Villa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_Out_Date__c</fullName>
        <label>Scheduled Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Primary_Occupancy_Id__c</fullName>
        <formula>if ( ISBLANK(Next_Resident_Occupancy_1__c), Next_Resident_Occupancy_2__c , Next_Resident_Occupancy_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Primary Occupancy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Resident_Occupancy_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Resident Occupancy 1</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Apartments (Next Resident Occupancy 1)</relationshipLabel>
        <relationshipName>Apartments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Resident_Occupancy_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Resident Occupancy 2</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Apartments (Next Resident Occupancy 2)</relationshipLabel>
        <relationshipName>Apartments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Resident_1_Last_Name__c</fullName>
        <formula>if (ISBLANK(Current_Resident_Occupancy_1__r.Resident__r.LastName),&apos;&apos;, Current_Resident_Occupancy_1__r.Resident__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Resident 1 Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Resident_Occupancy_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Resident Occupancy 1</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Apartments</relationshipLabel>
        <relationshipName>Apartments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Resident_Occupancy_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Resident Occupancy 2</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Apartments (Current Resident Occupancy 2)</relationshipLabel>
        <relationshipName>Apartments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Current_Occupancy_Id__c</fullName>
        <formula>If ( ISBLANK(Current_Resident_Occupancy_1__c), Current_Resident_Occupancy_2__c , Current_Resident_Occupancy_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Current Occupancy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Resident_Move_Out_Date__c</fullName>
        <label>Prior Resident Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Occupant_Move_In_Date__c</fullName>
        <formula>IF (ISBLANK(Current_Resident_Occupancy_1__c) &amp;&amp; ISBLANK(Current_Resident_Occupancy_2__c) , null,
IF(ISBLANK(Current_Resident_Occupancy_1__c), IF (ISBLANK(Current_Resident_Occupancy_2__r.Move_In_Date__c), Current_Resident_Occupancy_2__r.Scheduled_Move_In_Date__c,Current_Resident_Occupancy_2__r.Move_In_Date__c),
IF (ISBLANK(Current_Resident_Occupancy_1__r.Move_In_Date__c), Current_Resident_Occupancy_1__r.Scheduled_Move_In_Date__c,Current_Resident_Occupancy_1__r.Move_In_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Occupant Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Resident_1_First_Name__c</fullName>
        <formula>if (ISBLANK(Current_Resident_Occupancy_1__r.Resident__r.FirstName),&apos;&apos;, Current_Resident_Occupancy_1__r.Resident__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Resident 1 First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Resident_Move_In_Date__c</fullName>
        <label>Current Resident Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Resident_Move_Out_Date__c</fullName>
        <label>Current Resident Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Resident_Move_In_or_Transfe_Date__c</fullName>
        <label>Next Resident Move In or Transfe Date</label>
        <type>Date</type>
    </fields>
</CustomObject>